--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.64.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.1"
